Compute sensitivity only on given countries (#12)
* Compute sensitivity only on given countries

Signed-off-by: Viktor Terrier <viktor.terrier@rte-france.com>